app/objects/Cours__c.object
<CustomObject>
    <fields>
        <fullName>Duree__c</fullName>
        <label>Durée</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>professeur__c</fullName>
        <label>professeur</label>
        <referenceTo>Professeur__c</referenceTo>
        <relationshipLabel>Cours</relationshipLabel>
        <relationshipName>Cours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>salle__c</fullName>
        <label>Salle</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Cours</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Nom cours</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>